--- a/css/site.css
+++ b/css/site.css
@@ -3,30 +3,46 @@ h1, h2 {
   padding: 0;
   /* font-size: 1.2em; */
   font-weight: lighter;
+  font-size: 60px;
+  text-align: center;
+  color: #000000;
+  text-shadow: 3px 3px 1px rgb(243, 243, 243);
+}
+
+.two-column {
+  display: flex;
+  gap: 20px;
+  align-items: flex-start;
 }
 
 #content {
   width: calc(100% - 30px);
-  margin: 10px;080;
+  margin: 10px;
   padding: 10px;
   border: solid 1px #808;
-  font-family: sans-serif;
+  font-family: "Jersey 15", sans-serif;
 }
 
 .minor-section {
-  margin: 10px;
+  flex:1;
+  margin: 5px;
   padding: 10px;
-  border: solid 1px #A0A0A0;
+  border: solid 1px #000000;
   border-radius: 10px;
+  color: #5c2153;
 }
 
 .minor-section h2 {
+  flex:1;
+  padding: 10px;
   font-size: 1.2em;
 }
 
 /* Set the image to be responsive */
 .image-wrapper img {
+  display:block;
   max-width: 100%;
+  margin: 0 auto;
   height: auto;
 }
 
@@ -54,4 +70,8 @@ body.is-fullscreen #canvas-container {
   height: 100vh !important;
   margin: 0; /* Remove any default margins */
   z-index: 1000; /* Ensure it's above other content */
+}
+ 
+html{
+  background-color: hsl(0, 19%, 87%);
 }
