--- a/experiment1/css/style.css
+++ b/experiment1/css/style.css
@@ -58,6 +58,9 @@ h1 {
     text-align: center;
     margin-bottom: 0.2em;
 }
+#links{
+  font-family: 'Copperplate', sans-serif;
+}
 
 h2{
     font-family: 'Copperplate', sans-serif;
