--- a/experiment3/css/style.css
+++ b/experiment3/css/style.css
@@ -1,12 +1,10 @@
 /* style.css */
 
-/* Set the canvas element to be the full size of the container */
 canvas {
     width: 100%;
     height: 100%;
 }
 
-/* Center the canvas element on the page */
 body {
     display: flex;
     justify-content: center;
@@ -16,4 +14,45 @@ body {
 #canvas-container {
     width: 100%;
     height: 600px;
+}
+#canvas-wrapper {
+    display: flex;
+    gap: 1rem;          
+    justify-content: center;
+  }
+  
+  #overworld-container,
+  #dungeon-container {
+    flex: 1;   
+    height: 600px;
+    position: relative;
+    overflow: hidden;              
+  }
+  
+#overworld-container canvas,
+#dungeon-container canvas {
+  position: absolute !important;
+  top: 0;
+  left: 0;
+  width: 100% !important;
+  height: 100% !important;
+}
+h1 {
+    font-family:"Jersey 15", sans-serif;
+    font-size: 2em;
+    text-align: center;
+    margin-bottom: 0.2em;
+}
+#links{
+  font-family: "Jersey 15", sans-serif;
+}
+
+h2{
+    font-family: "Jersey 15", sans-serif;
+}
+
+p {
+    font-family: "Jersey 15", sans-serif;
+    font-size: 1em;
+    text-align: center;
 }
