--- a/experiment4/css/style.css
+++ b/experiment4/css/style.css
@@ -38,6 +38,7 @@ canvas {
   width: 100%;
   height: 100%;
   position: relative;
+  align-items: center;
 }
 
 #container canvas {
@@ -106,4 +107,20 @@ p {
 
 #links a:hover {
   text-decoration: underline;
+}
+#controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1em;
+  gap: 1em;
+}
+#controls input {
+  font-family: "Jersey 15", sans-serif;
+  font-size: 1.2em;
+  padding: 0.2em 0.5em;
+}
+#controls p {
+  font-family: "Jersey 15", sans-serif;
+  font-size: 1.5em;
 }
