--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,6 +1,6 @@
 
 .image-wrapper {
-  width: 100%x;
+  width: 40%;
   padding: 0;
   border-radius: 10px;
   overflow: hidden;
@@ -8,7 +8,7 @@
 
 .two-column {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 .two-column>*:nth-child(1) {
