--- a/cmpm147/css/project.css
+++ b/cmpm147/css/project.css
@@ -1,27 +1,58 @@
+* {
+    box-sizing: border-box;
+  }
+
 .project-section {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     padding: 10px;
   }
-  div.gallery {
-    margin: 5px;
+
+ .images{
+    width: 100%;
+    overflow: hidden;
+  }
+
+.gallery {
+    margin: 1.66%;
+    width: 30%;
+    box-sizing: border-box;
     border: 1px solid #ccc;
+    text-align: center;
     float: left;
-    width: 180px;
+
   }
   
-  div.gallery:hover {
+.gallery:hover {
     border: 1px solid #777;
   }
   
-  div.gallery img {
+.gallery img {
     width: 100%;
-    height: auto;
+    height: 200px;
+    object-fit: cover;
+    display: block;
   }
   
-  div.desc {
+.desc {
     padding: 15px;
     text-align: center;
+    font-size: 1rem;
   }
+  .images::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  @media (max-width: 800px) {
+    div.gallery {
+      width: 48%;
+      margin: 1%;
+    }
+  }
+  
+  @media (max-width: 500px) {
+    div.gallery {
+      width: 100%;
+      margin: 0 0 20px 0;
+    }
+  }
+  
